@@ -37,6 +37,7 @@
 
    - myIBin: has its own 'my-ibin-changed' signal (todo #1501).
    - mySettings: have an info message instead of debug when file doesn't exist.
+   - ofo-entry-fec.{c,h}: removed files.
 
 -----------------------------------------------------------------------
  Version 0.73
